[package]
name = "festivus"
version = "0.1.1"
edition = "2021"
authors = ["benny blader <ben@blockspaces.com"]
description = "Calculate a projected fee for a channel open with LND UTXOs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
bitcoin = { version = "0.31.0", features = ["serde", "rand"] }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["rt", "macros"] }
